--- a/package.json
+++ b/package.json
@@ -17,7 +17,12 @@
     "test:watch": "vitest",
     "test:cov": "vitest run --coverage",
     "test:e2e": "vitest run --config vitest.config.e2e.ts",
-    "prisma:generate": "prisma generate && sed -i '' 's|// @ts-nocheck||g' generated/prisma/*.ts generated/prisma/**/*.ts"
+    "prisma:generate": "prisma generate && sed -i '' 's|// @ts-nocheck||g' generated/prisma/*.ts generated/prisma/**/*.ts",
+    "test:load": "k6 run k6/full-scenario.test.js",
+    "test:load:auth": "k6 run k6/auth.test.js",
+    "test:load:products": "k6 run k6/products.test.js",
+    "test:load:plans": "k6 run k6/production-plans.test.js",
+    "test:load:leaves": "k6 run k6/leaves.test.js"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
